--- a/webhook.env
+++ b/webhook.env
@@ -1,1 +1,1 @@
-pp
+WEBHOOK=https://discord.com/api/webhooks/1236725710408646666/QXC9cW4S-Eeh7tmxZ18sZxp9ZZgFe4JqkMhkiDVtIxTIRKdfu377pvSP1j5MN4e3qcv9
